:art: refactor : State 인터페이스가 현재 상태를 알지 못하도록 리팩토링